Change the app properties to match the deployed service

--- a/final-api/src/main/resources/application.properties
+++ b/final-api/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/social_media
-spring.datasource.username=yachii19
-spring.datasource.password=password
+spring.datasource.url=postgresql://socialmedia_qxua_user:622hsBdgwdhsiMI23N4Uc3CGAT0m1Gtn@dpg-d0gnjlq4d50c73813uhg-a.singapore-postgres.render.com/socialmedia_qxua
+spring.datasource.username=socialmedia_qxua_user
+spring.datasource.password=622hsBdgwdhsiMI23N4Uc3CGAT0m1Gtn
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
