--- a/final-api/Dockerfile
+++ b/final-api/Dockerfile
@@ -1,7 +1,15 @@
 FROM eclipse-temurin:17-jdk-jammy
+
 WORKDIR /app
+
 COPY .mvn/ .mvn
 COPY mvnw pom.xml ./
 COPY src ./src
+
+# Add executable permissions to mvnw
+RUN chmod +x mvnw
+
+# Package the application
 RUN ./mvnw package -DskipTests
-CMD ["java", "-jar", "target/social-media-backend-0.0.1-SNAPSHOT.jar"]
+
+CMD ["java", "-jar", "target/social-media-backend-0.0.1-SNAPSHOT.jar"]git
