--- a/final-api/src/main/resources/application.properties
+++ b/final-api/src/main/resources/application.properties
@@ -1,14 +1,16 @@
-spring.datasource.url=jdbc:postgresql://socialmedia_qxua_user:622hsBdgwdhsiMI23N4Uc3CGAT0m1Gtn@dpg-d0gnjlq4d50c73813uhg-a.singapore-postgres.render.com/socialmedia_qxua
+# Database configuration
+spring.datasource.url=jdbc:postgresql://dpg-d0gnjlq4d50c73813uhg-a.singapore-postgres.render.com:5432/socialmedia_qxua
 spring.datasource.username=socialmedia_qxua_user
 spring.datasource.password=622hsBdgwdhsiMI23N4Uc3CGAT0m1Gtn
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+# JPA configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
-# File storage
+# File storage configuration
 file.upload-dir=uploads
 file.max-size=50MB
 
@@ -16,4 +18,5 @@ file.max-size=50MB
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
 
+# Server configuration
 server.port=8080
