--- a/final-api/src/main/resources/application.properties
+++ b/final-api/src/main/resources/application.properties
@@ -12,6 +12,10 @@ spring.jpa.properties.hibernate.format_sql=true
 file.upload-dir=/data/uploads
 file.max-size=50MB
 
+spring.web.resources.static-locations=file:/data/uploads/
+spring.mvc.static-path-pattern=/uploads/**
+
+
 # Allow multipart file uploads
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
