Fixed the upload image

--- a/final-api/src/main/resources/application.properties
+++ b/final-api/src/main/resources/application.properties
@@ -9,10 +9,11 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
 # File storage
-file.upload-dir=/data/uploads
+file.upload-dir=./uploads
 file.max-size=50MB
 
-spring.web.resources.static-locations=file:/data/uploads/
+# Make uploads publicly accessible
+spring.web.resources.static-locations=file:./uploads/
 spring.mvc.static-path-pattern=/uploads/**
 
 
